Sun Mar 18 23:24:04 GMT 2012  Dan Colish <dcolish@>

	* backends/brass/brass_databasereplicator.cc: size out buffer to the
	  incoming blocksize

Sun Mar 18 17:02:14 GMT 2012  Dan Colish <dcolish@>

	* .gitignore: ignore /.deps as well

Sun Mar 18 16:46:45 GMT 2012  Dan Colish <dcolish@>

	* .gitignore:Update gitignore for bump to libxapian-1.3

Sun Mar 18 04:37:37 GMT 2012  Olly Betts <olly@survex.com>

	* configure.ac: Set LIBRARY_VERSION_SUFFIX to -1.3.

Sun Mar 18 00:48:05 GMT 2012  Dan Colish <dcolish@gmail.com>

	* backends/brass/,common/Makefile.mk, common/compression_stream.h,
	  common/compression_stream.cc: Compress changesets in brass
	  replication. Increments the changeset version. Ticket #348

Sun Mar 18 00:39:23 GMT 2012  Dan Colish <dcolish@gmail.com>

	* tests/.gitignore,tests/soaktest/.gitignore: Add additional ignores
 	  for test artifacts

Fri Mar 16 05:23:54 GMT 2012  Olly Betts <olly@survex.com>

	* common/Makefile.mk: Missing part of previous change.

Fri Mar 16 04:59:53 GMT 2012  Olly Betts <olly@survex.com>

	* Makefile.am,m4-macros/xapian.m4: Rename libxapian to libxapian-1.3
	  and xapian.m4 to xapian-1.3.m4.

Wed Mar 14 04:58:55 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS,tests/api_unicode.cc,unicode/tclUniData.cc: Update
	  Unicode character database to 6.1.0.

Wed Mar 14 02:23:27 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS: Update for 1.3.0.

Tue Mar 13 07:44:32 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS: Update from 1.2.9 and ChangeLog.

Tue Mar 13 00:28:58 GMT 2012  Olly Betts <olly@survex.com>

	* docs/geospatial.rst: Fix typo - it's LatLongCoords::append() not
	  LatLongCoords::insert().

Mon Mar 12 23:14:20 GMT 2012  Olly Betts <olly@survex.com>

	* docs/admin_notes.rst: Fix typo - need "1.2.x" not "1.0.x" to get
	  both flint and chert support.

Mon Mar 12 11:54:19 GMT 2012  Olly Betts <olly@survex.com>

	* docs/Makefile.am: doxygen no longer generates any GIF files, so
	  stop trying to ship or install them.
