@@ -257,7 +257,8 @@ MultiAndPostList::count_matching_subqs() const
 {
     Xapian::termcount total = 0;
     for (size_t i = 0; i < n_kids; ++i) {
-	total += plist[i]->count_matching_subqs();
+	if (max_wt[i] > 0.0)
+	    total += plist[i]->count_matching_subqs();
     }
     return total;
 }
