@@ -1,3 +1,10 @@
+Mon Mar 19 05:42:50 GMT 2012  Olly Betts <olly@survex.com>
+
+	* matcher/multiandpostlist.cc: Don't count unweighted subqueries of
+	  MultiAndPostList for percentage calculations, as OP_FILTER maps to
+	  MultiAndPostList now.  (ticket#590)
+	* tests/api_percentages.cc: Regression test topercent6.
+
 Sun Mar 18 23:24:04 GMT 2012  Dan Colish <dcolish@>
 
 	* backends/brass/brass_databasereplicator.cc: size out buffer to the
